Spartanize and clean up the project